kubernetes/clusters/macmini/media/prowlarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media
spec:
  serviceName: prowlarr
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      serviceAccountName: prowlarr
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:nightly-0.2.0.1572-ls292
        readinessProbe:
          tcpSocket:
            port: 9696
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: config
            mountPath: /config
        ports:
        - name: prowlarr-ui
          containerPort: 9696
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 1Gi
