kubernetes/clusters/macmini/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr-ui
      protocol: TCP
      port: 9696
      targetPort: 9696
  type: ClusterIP
  clusterIP: None
